
$Id: changes.txt,v 1.101 2006/08/16 19:10:32 vvd0 Exp $

----
MVDSV v0.20.05-CVS/0.21 build 24??/2442 (2006.0?.??/2006.08.28)
* disconnect <disconn3ct@users.sourceforge.net>
- Ported from QW262: new command admin - spy'ing on rcon usage
  Can be used only by connected player. When you enable `spy mode' and
  somebody use rcon - you will be noticed. Use rcon admin off to disable spy mode.
- ZQuake's cmodel.c instead of original sv_model.c
- bugfix: banned users can use master_rcon

* jhodge <jhodge@users.sourceforge.net>
- new cvar sv_allowlastscores
  0 - disallow connection less command lastscores
  1 - allow connection less command lastscores
  default: 1
- bugfix from 0.1727: possibility to run master_rcon commands with normal rcon

* VVD <vvd0@users.sourceforge.net>
- optimized detection of ktpro and added detection of ktpro versions from 1.50 to 1.57
- bugfix from 0.20: qwdtools made "choppy" mvd demos from qwd (disconnect, hello :-))
- improved build number calculation
- bugfix from 0.179: "99% downloaded" - sometimes after downloading client don't rename temporary file to
  real filename and don't hide download bar - show 99% (EXPERIMENTAL)
(Thanks to Renzo)
- bugfix from 0.1726: on *nix '-u <UID>' didn't set uid
(Thanks to mli)
- improved -u and -g (setuid/setgid) support

* qqshka <qqshka@users.sourceforge.net>
- bugfix: u can use higher rate than sv_maxrate after some trix with downloading
- for developers: for QVM mods only, now you can check is particular infokey(...) "extension"
  supported by server, in mod you must use something like this: infokey(world, "\\realip")
  which rerurn "yes" if infokey(edict, "realip") supported.
- Removed *qwe_version from serverinfo, changed *version key in serverinfo so its looks like
  other server engines do, ktpro still happy because I made some work around (Tonik idea).
  We catch ktpro (in a new way) from 1.58 to 1.67, can't check for older ktpro since i have't
  qwprogs.dat from older ktpro.